--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sass": "^1.56.1",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.2.3"
     }
 }
